fix(img): path file of case senstive

--- a/conf.yaml
+++ b/conf.yaml
@@ -1,6 +1,6 @@
 #GitBlog配置文件，使用4个空格代替Tab
 ---
-url: https://curlybytes.com/
+url: /
 title: Curly Bytes
 subtitle: Creating real solution in Modern IT Problems
 theme: cube
